# dpsynth

./: CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: pytest.yml
docs/: conf.py  contributors_guide.md  data_and_terminology.md  in_memory_api.md  index.md  processing_lifecycle.md  sitemap.md
documentation/: scalable_beam_api.md  sitemap.md
dpsynth/: CHANGELOG.md  __init__.py  data_generation_v2.py  data_generation_v3.py  domain.py  postprocessing.py  pydantic_api.py  transformations.py
dpsynth/dataset_descriptors/: __init__.py
dpsynth/discrete_mechanisms/: README.md  aim.py  aim_gdp.py  common.py  direct.py  independent.py  mst.py  swift.py
dpsynth/eval/: __init__.py  attribute_statistics.py  correlation_computation.py  marginal_total_variance.py  one_way_distribution_computation.py  tabular_eval.proto  tabular_eval.py
dpsynth/examples/: adult_domain.yaml  detailed_example_theory_and_in_memory_api.ipynb  quickstart.ipynb
dpsynth/local_mode/: __init__.py  _quantiles.py  initialization.py  primitives.py  sufficient_statistics.py  vectorized_transformations.py
dpsynth/pipeline_transformations/: __init__.py  aim.py  diagnostic_info.py  dp_auto_discretizer.py  independent_mechanism.py  model.py  mst.py  swift.py
eval/: correlation_computation.py  one_way_distribution_computation.py  tabular_eval.py  types.py
tests/: constraints_test.py  data_generation_test.py  data_generation_v2_test.py  data_generation_v3_test.py  domain_test.py  postprocessing_test.py  pydantic_api_test.py  transformations_test.py
(+37 files in other folders)
